<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionGo"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/name" />

    <org.omgcobra.matchthese.data.TagCompleteView
        android:id="@+id/edit_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>