<resources>
    <string name="app_name">Recipe Matcher</string>

    <string name="recipes_title">Recipes</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="add_btn_text">Add</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_recipe_title">Recipe</string>
    <string name="delete_recipe">Delete recipe</string>
    <string name="delete_recipe_confirm">Delete this recipe?</string>
    <string name="delete">Delete</string>
    <string name="add_recipe_title">Add Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="drag_handle">Drag handle</string>
    <string name="recipes">Recipes</string>
    <string name="recipe_edit_title">Edit Recipe</string>
    <string name="ingredient_edit_title">Edit Ingredient</string>
    <string name="remove">Remove</string>
    <string name="ingredient">Ingredient</string>
    <string name="amount">Amount</string>
    <string name="add_row">Add row</string>
    <string name="recipe">Recipe</string>
    <string name="number">Number</string>
    <string name="unit">Unit</string>
    <string name="shopping_list_title">Shopping List</string>
    <string name="pantry_title">Pantry</string>
    <string name="todo">TODO</string>
    <string name="exit_toast">Press BACK again to exit</string>
</resources>
