...
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
        <TextView
                android:id="@+id/main_text"
                style="@style/item_view.main_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:id="@+id/sub_text"
            style="@style/item_view.sub_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_layout"
            app:layout_constraintEnd_toEndOf="parent"
...
